fixed overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -50,7 +50,10 @@
 
 .body {
   background-color: #F8F2FC;
-  overflow: hidden;
+}
+
+.overflow-hidden {
+  overflow-x: hidden;
 }
 
 .red {
